--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,27 @@
 [package]
 name = "imply_option"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Dynisious <daniel.bechaz@gmail.com>"]
-description = "Provides a single trait which allows the construction of an Option based on a bool value."
+description = """
+An implementation of [this RFC](https://github.com/rust-lang/rfcs/pull/2180).
+
+Provides a single `trait` which allows the construction of an `Option` based on a bool value.
+```
+extern crate imply_option;
+
+use imply_option::*;
+
+fn main() {
+    let pass = true;
+
+    assert_eq!(pass.then(1), Some(1));
+    assert_eq!(pass.then_do(|| 1), Some(1));
+
+    let fail = false;
+
+    assert_eq!(fail.then(1), None);
+}
+```"""
 
 repository = "https://github.com/Dynisious/imply_option"
 
